tests/baselines/reference/propertyAccessOnTypeParameterWithoutConstraints.errors.txt
propertyAccessOnTypeParameterWithoutConstraints.ts(4,17): error TS2454: Variable 'x' is used before being assigned.
propertyAccessOnTypeParameterWithoutConstraints.ts(5,20): error TS2454: Variable 'x' is used before being assigned.
propertyAccessOnTypeParameterWithoutConstraints.ts(5,22): error TS2339: Property 'toString' does not exist on type 'T'.
propertyAccessOnTypeParameterWithoutConstraints.ts(15,10): error TS2454: Variable 'i' is used before being assigned.
propertyAccessOnTypeParameterWithoutConstraints.ts(16,11): error TS2454: Variable 'i' is used before being assigned.
propertyAccessOnTypeParameterWithoutConstraints.ts(21,18): error TS2454: Variable 'a' is used before being assigned.
propertyAccessOnTypeParameterWithoutConstraints.ts(21,18): error TS2571: Object is of type 'unknown'.
propertyAccessOnTypeParameterWithoutConstraints.ts(22,19): error TS2454: Variable 'a' is used before being assigned.
propertyAccessOnTypeParameterWithoutConstraints.ts(22,19): error TS2571: Object is of type 'unknown'.
propertyAccessOnTypeParameterWithoutConstraints.ts(27,22): error TS2339: Property 'toString' does not exist on type 'T'.


==== propertyAccessOnTypeParameterWithoutConstraints.ts (10 errors) ====
    class C<T> {
        f() {
            var x: T;
            var a = x['toString'](); // should be string
                    ~
!!! error TS2454: Variable 'x' is used before being assigned.
            return a + x.toString();
                       ~
!!! error TS2454: Variable 'x' is used before being assigned.
                         ~~~~~~~~
!!! error TS2339: Property 'toString' does not exist on type 'T'.
        }
    }
    
    var r = (new C<number>()).f();
    
    interface I<T> {
        foo: T;
    }
    var i: I<number>;
    var r2 = i.foo.toString();
             ~
!!! error TS2454: Variable 'i' is used before being assigned.
    var r2b = i.foo['toString']();
              ~
!!! error TS2454: Variable 'i' is used before being assigned.
    
    var a: {
        <T>(): T;
    }
    var r3: string = a().toString();
                     ~
!!! error TS2454: Variable 'a' is used before being assigned.
                     ~~~
!!! error TS2571: Object is of type 'unknown'.
    var r3b: string = a()['toString']();
                      ~
!!! error TS2454: Variable 'a' is used before being assigned.
                      ~~~
!!! error TS2571: Object is of type 'unknown'.
    
    var b = {
        foo: <T>(x: T) => {
            var a = x['toString'](); // should be string
            return a + x.toString();
                         ~~~~~~~~
!!! error TS2339: Property 'toString' does not exist on type 'T'.
        }
    }
    
    var r4 = b.foo(1);